Corrige cosméticos pendientes: algoritmo mal etiquetado, APIs deprecadas
- PDFVerifySignatures: "Algoritmo de firma" mostraba el algoritmo con
  que la CA firmó el certificado (cert.getSigAlgName()), no el de la
  firma del documento -dos datos distintos que solo coinciden por
  casualidad-. Ahora se calcula desde la firma real leída del PDF
  (PdfPKCS7.getDigestAlgorithmName() + getSignatureAlgorithmName()).
  Confirmado con una firma real que antes coincidían por casualidad.

- Los tres firmadores de PDF usaban una decena de métodos de
  PdfSignatureAppearance deprecados en iText 8. El reemplazo ya existe
  en la misma versión 8.0.5 que ya se usaba -no hacía falta esperar a
  iText 9, como se había asumido antes-: SignerProperties +
  SignatureFieldAppearance, encontrado decompilando el jar real con
  javap. Verificado firmando y verificando PDFs reales (visible,
  invisible, bloqueado) y confirmando visualmente en Acrobat que el
  recuadro de firma se ve igual que antes.

- new URL(String), deprecado desde Java 20, reemplazado por
  URI.create(...).toURL() en xml_verify_xsd_structure. Un caso
  (downloadFromUrl) necesitó cuidado especial: URI.create() lanza
  IllegalArgumentException sin verificar donde new URL() lanzaba
  MalformedURLException verificada, y el llamador solo captura
  IOException -se traduce explícitamente para no dejar escapar un
  error sin capturar.

- serialVersionUID agregado a Pkcs11FallbackProvider y
  PKCS12CertificateExtractor.CustomException.

- Pkcs11FallbackSignature: engineSetParameter/engineGetParameter de
  SignatureSpi siguen siendo abstractos y de implementación
  obligatoria pese a estar deprecados -no hay reemplazo posible-,
  agregado @SuppressWarnings para dejarlo explícito.

- HELP.txt de PDFSignerPKCS11/PKCS12 mostraba el nombre del jar en
  minúscula estilo Maven en vez del nombre real de distribución.

Reactor completo sin ningún warning de deprecación. Redistribuido a
D:\S-FiDE-dist-1.1.1.

Co-Authored-By: Claude Sonnet 